# py-mcp-code-rag

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  SKILL.md  code-rag-cli.py  code-rag.sh  design_gaps.md  design_spec.md  overview.md  pyproject.toml  skill.md
eval/: CHAMPION  __init__.py
eval/harness/: analyze.py  intrinsic.py  label.py  ratchet.py  rebuild.py  score.py  slices.py
eval/queries/: adversarial.jsonl  dev.jsonl  heldout.jsonl  smoke.jsonl
eval/runs/: v0_baseline-20260422T201642Z.json  v0_baseline-20260422T220904Z.json  v0_baseline-20260422T233821Z.json
eval/variants/: composite.py  make_candidate.py  v0_baseline.py
mcp_rag/: __main__.py  api_models.py  client.py  db.py  discovery.py  embedder.py  imports.py  indexer.py  job.py  models.py  parsers.py  queries.py  reconcile.py  server.py  summarizer.py  webui.py
mcp_rag/go_parser/: main.go
mcp_rag/static/: index.html
scripts/: add_pi_mcp.py  gen_skill.py  remove_pi_mcp.py
tests/: conftest.py
tests/integration/: test_directory_units.py  test_indexer.py  test_mcp_server.py  test_module_units.py  test_server_search.py
tests/unit/: test_cli.py  test_client.py  test_cpp_parser.py  test_db.py  test_discovery.py  test_embedder.py  test_go_parser.py  test_imports.py  test_java_parser.py  test_js_ts_parser.py  test_make_candidate.py  test_models.py  test_parsers.py  test_reconcile.py  test_schema_migration.py  test_summarizer.py
